<resources>
    <string name="app_name">EmailAggregatorApp2</string>
    <string name="title">Welcome To Email Aggregator</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="signupemail">Email</string>
    <string name="signupusername">Create Username</string>
    <string name="signupcreatepassword">Create Password</string>
    <string name="signupconfirmpassword">Confirm Password</string>
    <string name="empty"></string>
    <string name="signuptitle">User Sign Up</string>
    <string name="logintitle">User Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="profiletitle">Profile Settings</string>
    <string name="usernamecolon">Username:</string>
    <string name="emailcolon">Email:</string>
    <string name="Back">Back</string>
    <string name="message">Messages</string>
    <string name="MessageSender">From:</string>
    <string name="MessageRecipient">To:</string>
    <string name="MessageSubject">Subject:</string>
    <string name="MessageContents">Contents:</string>
    <string name="IdPrompt">Message ID:</string>
    <string name="SendButton">Send</string>
    <string name="RecipientPrompt">Message Recipient</string>
    <string name="LoginFailure">Incorrect Username or Password</string>
    <string name="TPAccountsGoToStr">Add Account</string>
    <string name="Admin">Admin</string>
    <string name="SeeNavBar">See Nav Bar</string>
    <string name="HideNavBar">Hide Nav Bar</string>
    <string name="SelectServiceHeader">Select Message Service to Add Account For</string>
    <string name="AddChaosAccount">Chaos</string>
    <string name="AddCrewsAccount">Crews</string>
    <string name="AddCmailAccount">Cmail</string>
    <string name="GroupButton">Groups</string>
    <string name="GroupDefault">Select Group</string>
    <string name="JoinGroupHeader">Join Group</string>
    <string name="JoinCodeEntry">Enter Join Code</string>
    <string name="JoinCodeTbDefault">Join Code</string>
    <string name="JoinGroupButtonTxt">Join Group</string>
    <string name="BackButton">Back</string>
    <string name="CreateGroupHeaderStr">Create Group</string>
    <string name="CreateGroupTBLabel">Enter New Group Name</string>
    <string name="CreateGroupTBDefault">New Group Name</string>
    <string name="CreateGroupButtonStr">Create Group</string>
    <string name="TargetURLDefault">Target URL</string>
    <string name="EnterURLLabel">Enter URL for getting Messages</string>
    <string name="EnterTokenLabel">Enter API Token for Chaos</string>
    <string name="EnterTokenTB">API Token</string>
    <string name="EnterUsernameLabel">Enter the username of the account to connect.</string>
    <string name="EnterAccountPasswordLabel">Enter the password for the account to connect</string>
    <string name="AddAccountButtonText">Add Account</string>
    <string name="AddAccountGroup">Add Service Account for this Group\n</string>
    <string name="type_your_message">Type your message</string>
    <string name="send">Send</string>
    <string name="LiveChatButtonLabel">Live Chat</string>
    <string name="ReplyHeader">Reply to Message</string>
    <string name="ReplyButton">Reply</string>


</resources>